# MemMachine

./: .gitignore  CLAUDE.md  cfg.yml  docker-compose.yml  memmachine-compose.sh  pyproject.toml
docs/: docs.json
docs/examples/: mcp.mdx
docs/getting_started/: quickstart.mdx
docs/install_guide/: aws_bedrock.mdx  install_guide.mdx  introduction.mdx  ollama.mdx
docs/open_source/: configuration.mdx
evaluation/: CLAUDE.md
evaluation/locomo/episodic_memory/: llm_judge.py  locomo_config.yaml  locomo_evaluate.py  locomo_search.py
evaluation/locomo/episodic_memory/trial_1/: evaluation_metrics.json
evaluation/locomo/episodic_memory/trial_2/: evaluation_metrics.json
src/memmachine/common/embedder/: embedder_builder.py
src/memmachine/profile_memory/: profile_memory.py
src/memmachine/profile_memory/storage/: baseschema.sql
src/memmachine/server/: app.py  mcp_http.py  mcp_stdio.py
src/memmachine/server/prompt/: profile_prompt.py
tests/memmachine/profile_memory/: test_profile_memory_integration.py
tests/memmachine/server/: test_mcp_stdio.py  test_request_parameter.py  test_rest_memories.py
